changed the content of the first slide

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -82,12 +82,13 @@
 
 
     <section class="step" data-x="0" data-y="5000" data-scale="3" data-rotate="90">
-        <h1 class="slide-title">Philosophie git</h1>
-        <ul class="list">
+        <h1 class="slide-title"><i class="fa fa-book"></i> Philosophie git</h1>
+        <ul class="list list-bulletized">
             <li>Dépôt distribué</li>
-            <li>Pas de dépendance réseau (latence, dev nomade, ...)</li>
-            <li>Partage de code inter-personnel sans passer par l'origin</li>
-            <li>Rapidité d'opération (diff, log, ... tout est exécuté en local)</li>
+            <li>Philosophie axée sur les branches</li>
+            <li>Code quality (reviewing)</li>
+            <li>Participatif (pull request, fork)</li>
+            <li>Rapidité d'opération</li>
         </ul>
     </section>
 
