added icon before titles

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <section class="step slide" data-x="3000" data-y="5500" data-rotate="-90">
-        <h1 class="slide-title">Comparaison avec SVN</h1>
+        <h1 class="slide-title"><i class="fa fa-comments-o"></i> Comparaison avec SVN</h1>
         <table class="comparator">
             <thead>
                 <tr>
@@ -136,7 +136,7 @@
 
 
     <section class="step slide" data-x="3000" data-y="4000" data-rotate="-90">
-        <h1 class="slide-title">Comparaison cmd git/svn</h1>
+        <h1 class="slide-title"><i class="fa fa-terminal"></i> Comparaison cmd git/svn</h1>
         <table class="comparator">
             <thead>
                 <tr>
