added the advantages slide

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -191,9 +191,24 @@
         </table>
     </section>
     
+    <section class="step slide" data-x="3000" data-y="2500" data-rotate="-90">
+        <h1 class="slide-title"><i class="fa fa-check"></i> Avantages</h1>
+        <ul class="list fa-ul">
+            <li><i class="fa-li fa fa-check"></i> Philosophie de branches</li>
+            <li><i class="fa-li fa fa-check"></i> Rapidité d’exécution (exécution local)</li>
+            <li><i class="fa-li fa fa-check"></i> Favorise la qualité du code (Code review integré : pull request)</li>
+            <li><i class="fa-li fa fa-check"></i> Commit partiel (split de commit pour un même fichier)</li>
+            <li><i class="fa-li fa fa-check"></i> Repo local (offline work, branche temporaire local,...)</li>
+            <li><i class="fa-li fa fa-check"></i> Travaux concurrents simple (git stash ou commit local)</li>
+            <li><i class="fa-li fa fa-check"></i> Permet le partage exclusif (Dev to dev sans passer par l'origin)</li>
+            <li><i class="fa-li fa fa-check"></i> Merge efficace (meilleurs gestion de conflits)</li>
+            <li><i class="fa-li fa fa-check"></i> Pas de Tree Conflict (SVN)</li>
+        </ul>
+    </section>
+    
     <section class="step slide" data-x="4000" data-y="2000" data-scale="1">
-        <h1 class="slide-title">Liens utiles</h1>
-        <ul class="list">
+        <h1 class="slide-title"><i class="fa fa-link"></i> Liens utiles</h1>
+        <ul class="list list-bulletized">
             <li>Download git : <a href="http://msysgit.github.io/" target="_blank">msysgit.github.io</a></li>
             <li>Doc complète de git <em>"Git Book"</em> : <a href="https://git-scm.com/book/fr/v1" target="_blank">git-scm.com/book</a></li>
             <li>Liste de commandes git : <a href="https://git-scm.com/docs" target="_blank">git-scm.com/docs</a></li>
