add author meta

--- a/code-quality/index.html
+++ b/code-quality/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Code Quality</title>
+	<meta name="author" content="Yann Lerjen" />
 	<link rel="stylesheet" href="../libs/reveal.js/css/reveal.css">
     <link rel="stylesheet" href="../libs/reveal.js/css/theme/black.css">
     <link rel="stylesheet" href="styles.css">
@@ -16,7 +17,7 @@
                 		<h2>IDE</h2>
                 		<img src="assets/img/ide.png" alt="IDE" />
                 	</section>
-                	
+					                	
                 	<section>
                 		<h3>Utiliser la puissance des IDE</h3>
 						<ul>
