Add "use git introduction"

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -25,9 +25,20 @@
                         <li>CVS</li>
                         <li>Mercurial</li>
                     </ul>
-                </section>            
+                </section>
                 <section>
-                    <h1>Pourquoi GIT ?</h1>
+                    <h2>Utiliser git</h2>
+                    <p>Annuler une modification de fichier</p>
+                    <code>git checkout</code>
+                    <p>changer de branche</p>
+                    <code>git checkout</code>
+                    <p>créer une branch</p>
+                    <code>git checkout</code>
+                    <h3>WTF ?!</h3>
+                    <p>Tiré de <a href="https://www.miximum.fr/blog/enfin-comprendre-git/">miximum.fr</a></p>
+                </section>          
+                <section>
+                    <h1>Alors pourquoi GIT ?</h1>
                     <ul>
                         <li>Performances</li>
                         <li>Gestion des conflits</li>
