add the staging zone img

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -311,8 +311,10 @@
                     <h2>git status</h2>
                     <p>Etat de versioning</p>
                     <code>git status</code>
-                    <br/>
+                    <img src="img/git-staging-zone.png" alt="Staging zone"/>
 
+                </section>
+                <section>
                     <h2>git log</h2>
                     <p>Affiche le log des commits</p>
                     <code>git log</code>
