add good commit chapter

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -365,7 +365,26 @@
             </section>
             <section>
                 <section>
-                    <h1>Les commandes de branching</h1>
+                    <h1>Qu'est-ce qu'un bon commit ?</h1>
+                </section>
+                <section>
+                    <h2>Commit efficace</h2>
+                    <ul>
+                        <li>Atomique : Il ne concerne qu'une seule chose</li>
+                        <li>Petit : Il est le plus petit possible (mais cohérent)</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Lecture</h2>
+                    <ul>
+                        <li><a href="https://github.com/erlang/otp/wiki/writing-good-commit-messages">Writing good commit messages</a></li>
+                        <li><a href="http://chris.beams.io/posts/git-commit/">Git-commit by Chris Beams</a></li>
+                    </ul>
+                </section>
+            </section>
+            <section>
+                <section>
+                    <h1>Le branching</h1>
                     <img src="img/branch-all-the-things.jpg" alt="git branching cmd">
                 </section>
                 <section>
