add maximum article as a ref

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -518,6 +518,7 @@
                         <li>Download : <a href="http://msysgit.github.io">msysgit.github.io</a></li>
                         <li>Git book : <a href="http://git-scm.com/book/fr/v1">git-scm.com/book/fr/v1</a></li>
                         <li>Tuto github : <a href="https://try.github.io">Try github.io</a></li>
+                        <li>Enfin comprendre git : <a href="https://www.miximum.fr/blog/enfin-comprendre-git/">www.miximum.fr</a></li>
                     </ul>
                 </section>
                 <section>
