--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -322,7 +322,7 @@
                 </section>
                 <section>
                     <h2>git add</h2>    
-                    <p>Ajoute les fichiers au système de versioning</p>
+                    <p>Ajoute les fichiers au staging</p>
                     <code>git add &lt;filename&gt; [&lt;filename&gt;...]</code>
                     <br/>
 
@@ -386,6 +386,15 @@
                 <section>
                     <h1>Le branching</h1>
                     <img src="img/branch-all-the-things.jpg" alt="git branching cmd">
+                </section>
+                <section>
+                    <h2>Pourquoi les branches ?</h2>
+                    <ul>
+                        <li>Git favorise le branching</li>
+                        <li>Isolation de développement</li>
+                        <li>Pour garantir une stabilité sur master</li>
+                        <li>Améliorer le développement par équipe</li>
+                    </ul>
                 </section>
                 <section>
                     <h1>TODO</h1>
