switch to node packages instead of bower

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>GIT Versioning</title>
-	<link rel="stylesheet" href="../libs/reveal.js/css/reveal.css">
-    <link rel="stylesheet" href="../libs/reveal.js/css/theme/black.css">
+	<link rel="stylesheet" href="../node_modules/reveal.js/css/reveal.css">
+    <link rel="stylesheet" href="../node_modules/reveal.js/css/theme/black.css">
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>    
@@ -541,10 +541,10 @@
 	</div>
 
     
-    <script src="../libs/reveal.js/lib/js/head.min.js"></script>
-    <script src="../libs/reveal.js/js/reveal.js"></script>
+    <script src="../node_modules/reveal.js/lib/js/head.min.js"></script>
+    <script src="../node_modules/reveal.js/js/reveal.js"></script>
     <script>
-        var revealPlugins = '../libs/reveal.js/plugin/'
+        var revealPlugins = '../node_modules/reveal.js/plugin/'
         Reveal.initialize({
             dependencies: [
                 // Zoom in and out with Alt+click
