--- a/code-quality/index.html
+++ b/code-quality/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Code Quality</title>
 	<meta name="author" content="Yann Lerjen" />
-	<link rel="stylesheet" href="../libs/reveal.js/css/reveal.css">
-    <link rel="stylesheet" href="../libs/reveal.js/css/theme/black.css">
+	<link rel="stylesheet" href="../node_modules/reveal.js/css/reveal.css">
+    <link rel="stylesheet" href="../node_modules/reveal.js/css/theme/black.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -120,7 +120,7 @@ attribut_name // snake_case
         </div>
 
 
-        <script src="../libs/reveal.js/js/reveal.js"></script>
+        <script src="../node_modules/reveal.js/js/reveal.js"></script>
         <script>
             Reveal.initialize();
         </script>
