--- a/git-intro/index.old.html
+++ b/git-intro/index.old.html
@@ -11,12 +11,12 @@
     <meta name="author" content="Bartek Szopka" />
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
-    <link href="../libs/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="../libs/impress.js/css/impress-demo.css" rel="stylesheet" />
+    <link href="../node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../node_modules/impress.js/css/impress-demo.css" rel="stylesheet" />
     <link href="custom.css" rel="stylesheet" />
     
-    <link rel="shortcut icon" href="../libs/impress.js/favicon.png" />
-    <link rel="apple-touch-icon" href="../libs/impress.jsapple-touch-icon.png" />
+    <link rel="shortcut icon" href="../node_modules/impress.js/favicon.png" />
+    <link rel="apple-touch-icon" href="../node_modules/impress.js/apple-touch-icon.png" />
 </head>
 
 <!--
@@ -329,7 +329,7 @@ if ("ontouchstart" in document.documentElement) {
     document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
 }
 </script>
-<script src="../libs/impress.js/js/impress.js"></script>
+<script src="../node_modules/impress.js/js/impress.js"></script>
 <script>impress().init();</script>
 
 <!--
