non leading slide title should be heading style 2

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -19,7 +19,8 @@
                     <h1>Qu'est-ce que GIT ?</h1>                    
                 </section>    
                 <section>
-                    <h1>Outil de versioning</h1>
+                    <h2>Outil de versioning</h2>
+                    <p>Similaire à :</p>
                     <ul>
                         <li>SVN</li>
                         <li>CVS</li>
@@ -38,7 +39,7 @@
                     <p>Tiré de <a href="https://www.miximum.fr/blog/enfin-comprendre-git/">miximum.fr</a></p>
                 </section>          
                 <section>
-                    <h1>Alors pourquoi GIT ?</h1>
+                    <h2>Alors pourquoi GIT ?</h2>
                     <ul>
                         <li>Performances</li>
                         <li>Gestion des conflits</li>
