add xml auto-closing tag

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -56,17 +56,17 @@
                 </section>
                 <section>
                     <h2>Repository distribué</h2>
-                    <img src="img/distributed-repo.png" alt="Structure distribuée">
+                    <img src="img/distributed-repo.png" alt="Structure distribuée"/>
                 </section>
                 <section>
                     <h2>Distribué VS Centralisé</h2>                    
                     <div class="side-by-side-content">
                         <figure>
-                            <img src="img/distributed-repo.png" alt="Structure distribuée">
+                            <img src="img/distributed-repo.png" alt="Structure distribuée"/>
                             <caption>Structure distribuée</caption>
                         </figure>
                         <figure>
-                            <img src="img/centralized-repo.png" alt="Structure centralisée">
+                            <img src="img/centralized-repo.png" alt="Structure centralisée"/>
                             <caption>Structure centralisée</caption>
                         </figure>
                     </div>
@@ -97,18 +97,18 @@
                     </table>
                 </section>
                 <section>
-                    <h2>Snapshot de version</h2>                    
-                    <img src="img/git-version-system.png" alt="Versioning par snapshot">
+                    <h2>Snapshot de version (1/2)</h2>                    
+                    <img src="img/git-version-system.png" alt="Versioning par snapshot"/>
                 </section>
                 <section>
                     <h2>Snapshot VS <br/>versioning de fichier</h2>
                     <div class="side-by-side-content">
                         <figure>
-                            <img src="img/git-version-system.png" alt="Versioning par snapshot">
+                            <img src="img/git-version-system.png" alt="Versioning par snapshot"/>
                             <caption>Versioning par snapshot</caption>
                         </figure>
                         <figure>
-                            <img src="img/svn-version-system.png" alt="Versioning par fichier">
+                            <img src="img/svn-version-system.png" alt="Versioning par fichier"/>
                             <caption>Versioning par fichier</caption>
                         </figure>
                     </div>
@@ -134,7 +134,7 @@
             <section>
                 <section>
                     <h1>File System</h1>
-                    <img src="img/git-folders.png" alt="Dossier .git">
+                    <img src="img/git-folders.png" alt="Dossier .git" />
                 </section>
                 <section>
                     <h2>Dossier .git</h2>
@@ -230,11 +230,11 @@
             <section>
                 <section>
                     <h1>Git Flow</h1>
-                    <img src="img/git-flow-title.png" alt="Illustration git flow">
+                    <img src="img/git-flow-title.png" alt="Illustration git flow" />
                 </section>
                 <section>
                     <figure class="stretch">
-                        <img src="img/git-flow-h.png" alt="Git Flow présentation horizontale"/>
+                        <img src="img/git-flow-h.png" alt="Git Flow présentation horizontale" />
                     </figure>
                 </section>
                 <section>
@@ -296,7 +296,7 @@
             <section>
                 <section>
                     <h1>Les commandes de base</h1>
-                    <img src="img/git-cmd-title.png" alt="git bash">
+                    <img src="img/git-cmd-title.png" alt="git bash"/>
                 </section>
                 <section>
                     <h2>git init</h2>
@@ -386,7 +386,7 @@
             <section>
                 <section>
                     <h1>Le branching</h1>
-                    <img src="img/branch-all-the-things.jpg" alt="git branching cmd">
+                    <img src="img/branch-all-the-things.jpg" alt="git branching cmd" />
                 </section>
                 <section>
                     <h2>Pourquoi les branches ?</h2>
