added style for big top margin

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -13,6 +13,7 @@
             <section>
                 <h1>GIT Versioning</h1>
                 <img id="git-logo" class="slide-logo" src="img/logo-git.png" alt="Logo git">
+                <p class="big-top-margin">2016</p>
             </section>
             <section>
                 <section>
