add git author's name

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -27,6 +27,7 @@
                         <li>CVS</li>
                         <li>Mercurial</li>
                     </ul>
+                    <p>Créé par Linus Torvalds (linux)</p>
                 </section>
                 <section>
                     <h2>Utiliser git</h2>
