set a page x of y information in the title

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -61,7 +61,7 @@
                     <img src="img/distributed-repo.png" alt="Structure distribuée"/>
                 </section>
                 <section>
-                    <h2>Distribué VS Centralisé</h2>                    
+                    <h2>Distribué VS Centralisé (1/2)</h2>                    
                     <div class="side-by-side-content">
                         <figure>
                             <img src="img/distributed-repo.png" alt="Structure distribuée"/>
@@ -74,7 +74,7 @@
                     </div>
                 </section>
                 <section>
-                    <h2>Distribué VS Centralisé</h2>
+                    <h2>Distribué VS Centralisé (2/2)</h2>
                     <table>
                         <thead>
                             <tr>
@@ -116,7 +116,7 @@
                     </div>
                 </section>
                 <section>
-                    <h2>Snapshot VS Version</h2>
+                    <h2>Snapshot VS Version (2/2)</h2>
                     <table>
                         <tr>
                             <td>Gestion d'un système de fichier</td>
