change good commit title to best practices

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -368,7 +368,7 @@
             </section>
             <section>
                 <section>
-                    <h1>Qu'est-ce qu'un bon commit ?</h1>
+                    <h1>Bonnes pratiques</h1>
                 </section>
                 <section>
                     <h2>Commit efficace</h2>
