add code review infos

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -457,7 +457,8 @@
                     <h1>TODO</h1>
                     <h2>Revue de code</h2>
                     <ul>
-                        <li></li>
+                        <li>Détecter des bugs tôt dans le dev process</li>
+                        <li>Baisser les coûts de corrections</li>
                     </ul>
                 </section>
                 <section>
