add a convex transition between the slides

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -557,7 +557,8 @@
                     async: true
                 }
 
-            ]
+            ],
+            transition: 'convex'
         });
     </script>
 </body>
